更新2.0的风格

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -7,7 +7,7 @@ android {
         minSdkVersion project.appMinSdkVersion
         targetSdkVersion project.targetSdkVersion
 
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         javaCompileOptions {
             annotationProcessorOptions {
                 includeCompileClasspath = true
@@ -28,11 +28,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     //
     compileOnly "com.alibaba:fastjson:${project.fastjsonLibVersion}"
-    if (project.eeuiVersionCode >= 28) {
-        compileOnly "org.apache.weex:sdk_legacy:${project.weex_sdkLibVersion}"
-    } else {
-        compileOnly "com.taobao.android:weex_sdk:${project.weex_sdkLibVersion}"
-    }
+    compileOnly "org.apache.weex:sdk_legacy:${project.weex_sdkLibVersion}"
     //
     compileOnly project(":eeui")
 
