--- a/android/build.gradle
+++ b/android/build.gradle
@@ -32,5 +32,5 @@ dependencies {
     //
     compileOnly project(":eeui")
 
-    compile 'com.tencent.bugly:crashreport:latest.release'
+    implementation 'com.tencent.bugly:crashreport:latest.release'
 }
